
2023-01-18  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_mul_by_pow_10, cob_div_by_pow_10, cob_pow_10_uli)
	  [!PREFER_MPZ_MUL]: use integer multiplication for scaling, as this
	  has proven to be a bit faster than multiplication on pre-calculated mpz
	* numeric.c (cob_cmp_packed): optimized for speed

2023-01-17  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_decimal_set_packed): speedup (of ~8%) by handling
	  fields with less than 20 digits via integer computation instead
	  of GMP
	* numeric.c (cob_decimal_set_display): minor speedup by switching
	  to pointer arithmetic
	* numeric.c: applied 2022-05-30 changes for sign and shift_decimal
	* numeric.c (cob_mul_by_pow_10, cob_div_by_pow_10): extracted identical
	  code to inline functions
	* numeric.c (cob_s32_pow, cob_s64_pow): use of register type

2023-01-16  Simon Sobisch <simonsobisch@gnu.org>

	* statement.def (STMT_INIT_STORAGE): new internal statement

2023-01-15  Ron Norman <rjn@inglenet.com>

	* screenio.c: renamed max_pairs_available as this is defined on HPUX
	* common.c (check_current_date): fixed bad snprintf size

2023-01-12  Simon Sobisch <simonsobisch@gnu.org>

	* intrinsic.c: minor refactoring to reduce duplicated code

2023-01-04  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_cmp): fix stack-use-after-scope for comparisons of unsigned
	  numeric with non-numeric field

2023-01-03  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_accept_date, cob_accept_date_yyyymmdd, cob_accept_day,
	  cob_accept_day_yyyyddd, cob_accept_time, cob_accept_microsecond_time):
	  use binary intermediate field instead of numeric edited, replacing
	  "expensive" sprintf calls and multiple de-editing/editing to max. one
	  minimal editing (via move.c)
	* common.c (cob_move_to_group_as_alnum): new function to handle MOVE to
	  group as MOVE to alphanumeric field, used in functions above
	* common.c (cob_display_arg_number, cob_accept_arg_number, cob_cmp),